--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "config": "^3.3.9",
     "express": "^4.18.2",
@@ -16,6 +17,7 @@
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1",
     "sqlite3": "^5.1.6",
+    "superagent": "^8.1.2",
     "underscore": "^1.13.6",
     "uuid": "^9.0.0"
   },
