--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "config": "^3.3.9",
+    "csv": "^6.3.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2",
     "loadash": "^1.0.0",
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
