--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "csv": "^6.3.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
